--- a/index.html
+++ b/index.html
@@ -6,39 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Requisições com o fetch</title>
-    <style>
-        body {
-            background-color: rgb(95, 95, 95);
-        }
-
-        div {
-            max-width: 500px;
-            margin: auto;
-        }
-
-        h1 {
-            color: rgb(255, 255, 255);
-            text-align: center;
-            margin: 10px;
-        }
-
-        img {
-            display: flex;
-            margin: auto;
-        }
-
-        button {
-            display: flex;
-            margin: 20px auto;
-            border-radius: 20px;
-            padding: 10px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: rgb(167, 167, 167);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
